Verifying Updates to CSS are fixed on Mobile via Update to GitHub

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,45 +194,55 @@ h3 {
 }
 
 
-@media (max-width: 980px) {
+@media (max-width: 980px) and (min-width: 769px) {
    .Main-Content {
       position: relative;
-      width: 518px;
+      width: 688px;
       background-color:#ffffff;
       border: 1px solid #dddddd;
-      margin: 0px 200px 0px 90px;
+      margin: 20px;
       padding: 20px;
    }
 
+   header{
+      height:75px;
+      margin: 0px;
+   }
+
    .Header-Content {
-      width: 760px;
+      width: 100%;
       height: 100%;
-      margin: 0px 200px 0px 90px;
+      margin-left: 20px;
    }
    
    .ImageHolder {
       float: left;
       position:relative;
-      height: 188.5px;
+      height: 200.5px;
       margin-right:10px;
-      margin-bottom: 10px;
-      width: 234px;
+      margin-bottom: 25px;
+      width: 325px;
+      left:1px;
    }
 
    .position-relative {
       position: relative;
       left:0px;
-      width: 234px;
-      height: 188.5px;
+      width: 325px;
+      height: 200.5px;
    }
 
    .Image-Label {
       position: absolute;
-      width: 234px;
-      height: 60px;
+      width: 325px;
+      height: 45px;
       background-color: #4aaaa5;
-      top: 110px;
+      top: 120px;
       z-index: 1;
+   }
+
+   .image-left {
+      margin-right: 25px;
    }
    
    h3 {
@@ -243,12 +253,78 @@ h3 {
       font-size: 18pt;
       font-weight: 520;
    }
+
+   .Personal-Img{
+      width: 368px;
+      height: 242px;
+      padding-right: 25px;
+      float: left;
+  }
+
+  .HeadingWrapper{
+      width: 37%;
+      float: left;
+      margin-left: 0px;
+   }
+
+   nav {
+      height: 50px;
+      width: 300px;
+      float: right;
+      margin-left: 0px;
+      margin-right: 20px;
+      text-align: center;
+      margin-top: 25px;
+      padding-top: 0px;
+      background-color:#ffffff;
+   }
+
+   .NavLink {
+      margin: 120px 0px 0px 0px;
+   }
+
+   .Footer-Content{
+      left:325px;
+   }
+   
+   input[type=text] {
+      width: 682px;
+      padding-left: 5px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      margin-bottom: 10px;
+      margin-top: 5px;
+   }
+   
+   textarea {
+      width: 682px;
+      height: 200px;
+      margin: auto;
+      padding-left: 5px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      overflow: auto;
+      margin-bottom: 10px;
+      margin-top: 5px;
+   }
+   
+   input[type=submit] {
+      background-color: #4aaaa5;
+      border: none;
+      color: #ffffff;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin-top: 15px;
+   }
    
 }
-@media (max-width: 768px) {
+@media (max-width: 768px) and (min-width: 641px) {
    .Main-Content {
       position: relative;
-      width: 688px;
+      width: 90%;
       background-color:#ffffff;
       border: 1px solid #dddddd;
       margin: auto;
@@ -260,7 +336,7 @@ h3 {
    }
 
    .Header-Content {
-      width: 768px;
+      width: 100%;
       height: 100%;
       margin: 0px 0px 0px 0px;
    }
@@ -337,7 +413,7 @@ h3 {
    }
    
    input[type=text] {
-      width: 682px;
+      width: 98%;
       padding-left: 5px;
       padding-top: 5px;
       padding-bottom: 5px;
@@ -346,7 +422,7 @@ h3 {
    }
    
    textarea {
-      width: 682px;
+      width: 98%;
       height: 200px;
       margin: auto;
       padding-left: 5px;
@@ -373,11 +449,10 @@ h3 {
 @media (max-width: 640px) {
    .Main-Content {
       position: relative;
-      width: 568px;
+      width: 97%;
       background-color:#ffffff;
       border: 1px solid #dddddd;
-      margin: auto;
-      padding: 20px;
+      padding: 0px;
    }
 
    header{
@@ -385,7 +460,7 @@ h3 {
    }
 
    .Header-Content {
-      width: 640px;
+      width: 100%;
       height: 100%;
       margin: 0px 0px 0px 0px;
    }
@@ -457,7 +532,7 @@ h3 {
    }
    
    input[type=text] {
-      width: 560px;
+      width: 95%;
       padding-left: 5px;
       padding-top: 5px;
       padding-bottom: 5px;
@@ -466,7 +541,7 @@ h3 {
    }
    
    textarea {
-      width: 560px;
+      width: 95%;
       height: 200px;
       margin: auto;
       padding-left: 5px;
